tests/mypy/mypy_function_wrapper_fn_t7.out
tests/mypy/mypy_function_wrapper_fn_t7.py:62: error: Too few arguments for "function2"  [call-arg]
tests/mypy/mypy_function_wrapper_fn_t7.py:95: error: Missing positional argument "value" in call to "ExampleClass"  [call-arg]
tests/mypy/mypy_function_wrapper_fn_t7.py:105: error: Missing positional argument "value" in call to "instance_method" of "ExampleClass"  [call-arg]
tests/mypy/mypy_function_wrapper_fn_t7.py:106: error: Missing positional argument "value" in call to "class_method" of "ExampleClass"  [call-arg]
tests/mypy/mypy_function_wrapper_fn_t7.py:107: error: Too few arguments for "static_method" of "ExampleClass"  [call-arg]
tests/mypy/mypy_function_wrapper_fn_t7.py:109: error: Missing positional argument "value" in call to "__call__" of "ExampleClass"  [call-arg]
Found 6 errors in 1 file (checked 1 source file)
